[package]
name = "cdby"
version = "0.0.2"
edition = "2021"
description = "A simple utility to find a file and drop to a shell next to it."
authors = ["Itai <your-email@example.com>"]
license = "MIT"
repository = "https://github.com/itaiin/cdby"
keywords = ["utility", "file", "shell"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
nix="0.26.2"
regex = "1"
ignore = "0.4"

[dependencies.clap]
version = "4.1.4"
features = ["suggestions", "color", "wrap_help", "cargo", "unstable-grouped", "derive"]

[[bin]]
bench = false
path = "src/main.rs"
name = "cdby"